--- a/docs/scenarios/cloud-scale-analytics/toc.yml
+++ b/docs/scenarios/cloud-scale-analytics/toc.yml
@@ -164,14 +164,14 @@ items:
 
   - name: Tutorials
     items:
-    - name: Customer scenario
-      href: ../cloud-scale-analytics/tutorials/tutorial-customer-scenario.md
+    - name: Evaluate data requirements
+      href: ../cloud-scale-analytics/tutorials/tutorial-evaluate-scenario.md
     - name: Create a data landing zone
       href: ../cloud-scale-analytics/tutorials/tutorial-create-data-landing-zone.md
     - name: Create a data product batch
-      href: ../cloud-scale-analytics/tutorials/tutorial-create-data-product.md
-    - name: Interact with a data product batch
-      href: ../cloud-scale-analytics/tutorials/tutorial-interact-data-product.md
+      href: ../cloud-scale-analytics/tutorials/tutorial-create-data-product-batch.md
+    - name: Set up a data product batch
+      href: ../cloud-scale-analytics/tutorials/tutorial-set-up-data-product-batch.md
     - name: Cleanup instructions
       href: ../cloud-scale-analytics/tutorials/cleanup-instructions.md
 
