--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -516,6 +516,11 @@ items:
           - name: Azure operational security best practices
             href: /azure/security/fundamentals/operational-best-practices?bc=/azure/cloud-adoption-framework/_bread/toc.json&toc=/azure/cloud-adoption-framework/toc.json
 
+    - name: Security Control Mapping
+      items:
+      - name: What is Control Mapping?
+        href: ready/control-mapping/security-control-mapping.md
+
     - name: Skills relevant to ready and landing zones
       href: ready/suggested-skills.md
 
