--- a/docs/scenarios/app-platform/toc.yml
+++ b/docs/scenarios/app-platform/toc.yml
@@ -399,7 +399,23 @@ items:
         href: /azure/openshift/tutorial-connect-cluster?bc=/azure/cloud-adoption-framework/_bread/toc.json&toc=/azure/cloud-adoption-framework/scenarios/app-platform/toc.json
       - name: Delete an ARO cluster
         href: /azure/openshift/tutorial-delete-cluster?bc=/azure/cloud-adoption-framework/_bread/toc.json&toc=/azure/cloud-adoption-framework/scenarios/app-platform/toc.json
-    - name: Azure Functions
+      - name: Identity and access management considerations for ARO
+        href: scenarios\app-platform\aro\aro-identity-and-access-management.md
+      - name: ARO landing zone accelerator
+        href: scenarios\app-platform\aro\aro-landing-zone-accelerator.md
+      - name: Network topology and connectivity for ARO
+        href: scenarios\app-platform\aro\aro-network-topology-and-connectivity.md
+      - name: Operations and BCDR for ARO
+        href: scenarios\app-platform\aro\aro-operations-management-and-bcdr.md
+      - name: Platform Automation and DevOps for ARO
+        href: scenarios\app-platform\aro\aro-platform-automation-devops.md
+      - name: Resource organization considerations for ARO
+        href: scenarios\app-platform\aro\aro-resource-organization.md
+      - name: Security for ARO
+        href: scenarios\app-platform\aro\aro-security.md
+
+    
+    name: Azure Functions
       items:
       - name: Azure Functions
         href: /azure/azure-functions/functions-overview?bc=/azure/cloud-adoption-framework/_bread/toc.json&toc=/azure/cloud-adoption-framework/scenarios/app-platform/toc.json
