--- a/docs/scenarios/app-platform/toc.yml
+++ b/docs/scenarios/app-platform/toc.yml
@@ -399,20 +399,20 @@ items:
         href: /azure/openshift/tutorial-connect-cluster?bc=/azure/cloud-adoption-framework/_bread/toc.json&toc=/azure/cloud-adoption-framework/scenarios/app-platform/toc.json
       - name: Delete an ARO cluster
         href: /azure/openshift/tutorial-delete-cluster?bc=/azure/cloud-adoption-framework/_bread/toc.json&toc=/azure/cloud-adoption-framework/scenarios/app-platform/toc.json
-      - name: Identity and access management considerations for ARO
-        href: \aro\aro-identity-and-access-management.md
-      - name: ARO landing zone accelerator
+      - name: ARO Landing zone accelerator
         href: \aro\aro-landing-zone-accelerator.md
-      - name: Network topology and connectivity for ARO
+      - name: Identity and access management
+        href: \aro\aro-identity-and-access-management.md
+      - name: Network topology and connectivity
         href: \aro\aro-network-topology-and-connectivity.md
-      - name: Operations and BCDR for ARO
-        href: \aro\aro-operations-management-and-bcdr.md
-      - name: Platform Automation and DevOps for ARO
-        href: \aro\aro-platform-automation-devops.md
-      - name: Resource organization considerations for ARO
+      - name: Resource organization
         href: \aro\aro-resource-organization.md
-      - name: Security for ARO
+      - name: Security
         href: \aro\aro-security.md
+      - name: Operations management
+        href: \aro\aro-operations-management-and-bcdr.md
+      - name: Platform automation 
+        href: \aro\aro-platform-automation-devops.md
     - name: Azure Functions
       items:
       - name: Azure Functions
