--- a/docs/scenarios/azure-vmware/toc.yml
+++ b/docs/scenarios/azure-vmware/toc.yml
@@ -18,7 +18,7 @@ items:
         href: eslz-network-topology-connectivity.md
       - name: Governance discipline
         href: eslz-security-governance-and-compliance.md
-      - name: Operations baseline
+      - name: Management and monitoring
         href: eslz-management-and-monitoring.md
       - name: Business continuity and disaster recovery
         href: eslz-business-continuity-and-disaster-recovery.md
