--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -1896,9 +1896,9 @@ items:
           href: ready/azure-best-practices/ai-machine-learning-resource-organization.md
         - name: Best practices for enterprise security
           href: ready/azure-best-practices/ai-machine-learning-enterprise-security.md
-        - name: Budget, cost, and quota management with Azure Machine Learning
+        - name: Manage budget, cost, and quota with Azure Machine Learning
           href: ready/azure-best-practices/optimize-ai-machine-learning-cost.md
-        - name: Machine learning DevOps (MLOps)
+        - name: Machine learning operations
           href: ready/azure-best-practices/ai-machine-learning-mlops.md
       - name: Create hybrid cloud consistency
         href: ready/considerations/hybrid-consistency.md
