--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -1892,11 +1892,11 @@ items:
           href: /azure/azure-sql/azure-sql-iaas-vs-paas-what-is-overview?toc=/azure/cloud-adoption-framework/toc.json&bc=/azure/cloud-adoption-framework/_bread/toc.json
       - name: AI + machine learning
         items:
-        - name: Organize and set up Azure Machine Learning environments
+        - name: Organize and set up Azure Machine Learning
           href: ready/azure-best-practices/ai-machine-learning-resource-organization.md
         - name: Best practices for enterprise security
           href: ready/azure-best-practices/ai-machine-learning-enterprise-security.md
-        - name: Manage budget, cost, and quota with Azure Machine Learning
+        - name: Manage budget, cost, and quota with Azure
           href: ready/azure-best-practices/optimize-ai-machine-learning-cost.md
         - name: Machine learning operations
           href: ready/azure-best-practices/ai-machine-learning-mlops.md
