--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -379,7 +379,7 @@ items:
           - name: Service enablement framework
             href: ready/landing-zone/design-area/service-enablement-framework.md
           - name: Security Control Mapping
-            href: ready/design area/security/control-mapping/security-control-mapping.md
+            href: ready\control-mapping\security-control-mapping.md
             
         - name: Management
           items:
