--- a/templates/scenarios/toc.yml
+++ b/templates/scenarios/toc.yml
@@ -18,10 +18,12 @@ items:
         href: eslz-network-topology-and-connectivity.md
       - name: Resource organization
         href: eslz-resource-organization.md
+      - name: Security
+        href: eslz-security.md
+      - name: Management
+        href: eslz-management-and-monitoring.md
       - name: Governance discipline
         href: eslz-security-governance-and-compliance.md
-      - name: Operations baseline
-        href: eslz-management-and-monitoring.md
       - name: Business continuity and disaster recovery
         href: eslz-business-continuity-and-disaster-recovery.md
       - name: Platform automation and DevOps
