--- a/docs/scenarios/azure-hpc/toc.yml
+++ b/docs/scenarios/azure-hpc/toc.yml
@@ -20,7 +20,7 @@ items:
       - name: Resource organization
         href: eslz-resource-organization.md
       - name: Security
-        href: eslz-security.md
+        href: security.md
       - name: Management
         href: eslz-management-and-monitoring.md
       - name: Governance discipline
@@ -31,7 +31,7 @@ items:
         href: eslz-platform-automation-and-devops.md
     - name: Implementation options
       items:
-      - name: Enterprise-scale for {{Token-LongName}}
+      - name: Enterprise-scale for Azure high-performance computing (HPC)
         href: enterprise-scale-landing-zone.md
       - name: TODO - Add reference to smaller RA from AAC here
         href: enterprise-scale-landing-zone.md?add-toc-and-breadcrumb-here
