--- a/docs/scenarios/azure-hpc/toc.yml
+++ b/docs/scenarios/azure-hpc/toc.yml
@@ -7,32 +7,74 @@ items:
     href: plan.md
   - name: Prepare your environment
     items: 
-    - name: Azure Landing Zones
+    - name: Azure landing zone for HPC (overall)
       href: ready.md
-    - name: Design areas
+    - name: Energy (oil & gas)
       items:
-      - name: Billing and Active Directory tenant
-        href: eslz-enterprise-enrollment-and-azure-ad-tenants.md
-      - name: Identity and access management
-        href: eslz-identity-and-access-management.md
-      - name: Network topology and connectivity
-        href: eslz-network-topology-and-connectivity.md
-      - name: Resource organization
-        href: eslz-resource-organization.md
-      - name: Security
-        href: security.md
-      - name: Management
-        href: eslz-management-and-monitoring.md
-      - name: Governance discipline
-        href: eslz-security-governance-and-compliance.md
-      - name: Business continuity and disaster recovery
-        href: eslz-business-continuity-and-disaster-recovery.md
-      - name: Platform automation and DevOps
-        href: eslz-platform-automation-and-devops.md
+      - name: Design areas
+        items:
+        - name: Billing and Active Directory tenant
+          href: energy/energy-azure-billing-and-active-directory-tenant
+        - name: Identity and access management
+          href: energy/energy-identity-and-access-management.md
+        - name: Network topology and connectivity
+          href: energy/energy-network-topology-and-connectivity.md
+        - name: Resource organization
+          href: energy/energy-resource-organization.md
+        - name: Security
+          href: energy/energy-security.md
+        - name: Management
+          href: energy/energy-management.md
+        - name: Governance discipline
+          href: energy/energy-security-governance-and-compliance.md
+        - name: Platform automation and DevOps
+          href: energy/energy-platform-automation-and-devops.md
+    - name: Finance  
+      items:
+      - name: Design areas
+        items:
+        - name: Billing and Active Directory tenant
+          href: finance/finance-azure-billing-and-active-directory-tenant
+        - name: Identity and access management
+          href: finance/finance-identity-and-access-management.md
+        - name: Network topology and connectivity
+          href: finance/finance-network-topology-and-connectivity.md
+        - name: Resource organization
+          href: finance/finance-resource-organization.md
+        - name: Security
+          href: finance/finance-security.md
+        - name: Management
+          href: finance/finance-management.md
+        - name: Governance discipline
+          href: finance/finance-security-governance-and-compliance.md
+        - name: Platform automation and DevOps
+          href: finance/finance-platform-automation-and-devops.md
+    - name: Manufacturing  
+      items:
+      - name: Design areas
+        items:
+        - name: Billing and Active Directory tenant
+          href: manufacturing/manufacturing-azure-billing-and-active-directory-tenant
+        - name: Identity and access management
+          href: manufacturing/manufacturing-identity-and-access-management.md
+        - name: Network topology and connectivity
+          href: manufacturing/manufacturing-network-topology-and-connectivity.md
+        - name: Resource organization
+          href: manufacturing/manufacturing-resource-organization.md
+        - name: Security
+          href: manufacturing/manufacturing-security.md
+        - name: Management
+          href: manufacturing/manufacturing-management.md
+        - name: Governance discipline
+          href: manufacturing/manufacturing-security-governance-and-compliance.md
+        - name: Platform automation and DevOps
+          href: manufacturing/manufacturing-platform-automation-and-devops.md
+
+
     - name: Implementation options
       items:
       - name: Enterprise-scale for Azure high-performance computing (HPC)
-        href: enterprise-scale-landing-zone.md
+        href: azure-hpc-landing-zone-accelator.md
       - name: TODO - Add reference to smaller RA from AAC here
         href: enterprise-scale-landing-zone.md?add-toc-and-breadcrumb-here
   - name: Migrate HPC to Azure
